--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,6 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-
 # Splitting terminals using | and -
 unbind '"'
 unbind %
@@ -26,7 +25,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 
 set -g @dracula-show-powerline true
-set -g @dracula-plugins "weather"
+# set -g @dracula-plugins "weather"
 set -g @dracula-git-disable-status true
 set -g @dracula-show-left-icon session
 set -g @dracula-show-flags true
