Feat: Add resurrect plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,7 @@ setw -g pane-base-index 1
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @dracula-show-powerline true
 # set -g @dracula-plugins "weather"
